# MAGI

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  setup.py
.f2py/: base_env.txt  f2py_env.txt  run_f2py.sh
.f2py/compare/: ham_dat  lu_sinv_ndiags_arrowhead_test.py  test-gw-bse.py
.f2py/examples/InAs/: README.md
.f2py/examples/agnr7/: convergence.py  ex1_bse.ipynb  plot.gnu
.f2py/examples/bulk_hBN_QE/: hBN.py
.f2py/tests/: test-gw.py
.f2py/tests/MoS2/: ham_dat  test-gw.py
.f2py/tests/agnr7/: post.py  serinv  sinv.py  test-gw-bse.py  (+3 more)
.python/: bse_sparse.py  polarization.py
Modules/: block_sparse.f95  bse_dense.f95  bse_sparse.f95  fft.f95  gf_dense.f95  gw_dense.f95  hilbert.f95  output.f95  parameters.f95  polarization.f95  sinv.f95
Modules/gpu/: gpu_polarization.f95
app/: ephphinteraction.py  plotcurrent.py  sidewithinteraction.py
f2py/: mkl_dfti.mod  run_f2py.sh  test-gw-bse.py  test-gw.py  test.py
f2py/compare/: compare_sdr_bse.py  log_gfdense-solvegw3d  mkl_dft_type.mod  run_f2py.sh  sdr_test.py  test-gw-bse.py
f2py/src/: bse_dense.mod  fft_mod.mod  gf_dense.mod  legendre.mod  linalg.mod  matrix_c.mod  negf.f95  observ.mod  open_boundary.mod  output.mod  parameters_mod.f95  parameters_mod.mod  rgf.mod  util.f95  wannier.f95  wannierham.mod
f2py/tests/: test-gw-bse.py  test-gw.py
magi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: bcsr_matrix.py
src/magi/: __about__.py  __init__.py
tests/: test_bse-sparse.py  test_bse-sparse_compare-methods.py
tests/agnr7/: bse-sparse.py  ham_dat  job.sh
(+157 files in other folders)
